# weclaw

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEV.md  LICENSE  README.md  README_ZH.md  docker-compose.yml  pre-commit.sh
backend/: .env.example  .env.production  .gitignore  .ruff.toml  DESIGN.md  Dockerfile  README.md  __init__.py  alembic.ini  cli.py  main.py  pre_start.sh  pyproject.toml  run.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 2025-09-09-18_52_15-3e8848dd63b8_.py  2025-09-09-21_15_07-401cd3678a27_.py  2025-09-23-14_02_46-c1fc85ca108f_.py  2025-09-23-15_50_22-4749e906f64e_.py  2025-09-24-10_29_06-c85ea8356210_.py  2025-09-26-10_58_08-cadb97f46b78_.py  2025-10-17-18_27_10-5d1fde65b10c_.py  2025-10-24-11_17_13-2cc75bdee659_.py  2026-02-07-19_36_18-06483a45b8b9_.py  2026-02-07-23_27_20-09ce9664aeab_.py  2026-02-09-14_55_57-1c1ae5d03f1b_.py  2026-02-09-15_48_44-8d93aa23851a_.py  2026-02-09-16_39_56-9507b23b12b5_.py  2026-02-09-17_33_27-65a8582e213c_.py  2026-02-10-22_46_28-5d7eca81228e_.py  2026-02-10-22_47_43-c504b9716fbc_.py  2026-02-11-15_05_26-98faadcebbd3_.py  2026-02-19-21_21_46-e4c103e92f02_.py  (+6 more)
backend/app/: __init__.py  router.py
backend/common/: dataclasses.py  enums.py  i18n.py  log.py  model.py  pagination.py  queue.py  schema.py
backend/core/: conf.py  path_conf.py  registrar.py
backend/database/: chat_db.py  db.py  redis.py  sqlite.py
backend/deploy/: .env.docker  celery.conf  server.conf  supervisord.conf
backend/middleware/: access_middleware.py  i18n_middleware.py  jwt_auth_middleware.py  opera_log_middleware.py  state_middleware.py
backend/static/: ws.html
backend/tests/: README.md  add_param_test.py  ag_ui_test.py  agentscope_delta.py  agentscope_test.py  as_mcp_test.py  chat_memory.db  dashscope_test.py  fastmcp_client_test.py  fastmcp_server_test.py  load_msg.py  modelscope_mcp.py  openai_test.py  sse_test.py  test_mcp_client.py  test_memory.db
backend/utils/: agui.py  build_tree.py  cache.py  console.py  email.py  encrypt.py  file_ops.py  gen_template.py  health_check.py  import_parse.py  openai.py  openapi.py  password_security.py  re_verify.py  redis_info.py  request_parse.py  serializers.py  server_info.py  snowflake.py  timezone.py  trace_id.py  type_conversion.py  tzcrontab.py
deploy/: Caddyfile
(+721 files in other folders)
