[project]
name = "wemcp"
version = "0.0.1"
description = """
WeMCP Agent
"""
authors = [
    { name = "GaoZhe", email = "fovegage@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10, <3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.5",
    "alibabacloud-tea-openapi>=0.3.16",
    "asgi-correlation-id>=4.3.4",
    "asgiref>=3.9.1",
    "asyncmy>=0.2.10",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "cappa>=0.30.0",
    "celery>=5.5.3",
    # When celery version < 6.0.0
    # https://github.com/celery/celery/issues/7874
    "celery-aio-pool>=0.1.0rc8",
    "cryptography>=45.0.6",
    "dulwich>=0.24.1",
    "fast-agent-mcp>=0.2.25",
    "fast-captcha>=0.3.2",
    "fastapi-limiter>=0.1.6",
    "fastapi-oauth20>=0.0.1",
    "fastapi-pagination>=0.14.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.116.1",
    "flower>=2.0.1",
    "gevent>=25.8.2",
    "granian>=2.5.1",
    "ip2loc>=1.0.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "mcp>=1.13.1",
    "msgspec>=0.19.0",
    "psutil>=7.0.0",
    "psycopg[binary]>=3.2.9",
    "pwdlib>=0.2.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymysql>=1.1.1",
    "python-jose>=3.5.0",
    "python-socketio>=5.13.0",
    "redis[hiredis]>=6.4.0",
    "rtoml>=0.12.0",
    "sqlalchemy-crud-plus>=1.11.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "sqlparse>=0.5.3",
    "tenacity>=9.1.2",
    "user-agents>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-sugar>=1.0.0",
]
lint = [
    "pre-commit>=4.0.0",
]
server = [
    "gunicorn>=21.2.0",
    "aio-pika>=9.4.3",
    "wait-for-it>=2.2.2",
]

[tool.uv]
python-downloads = "manual"
default-groups = ["dev", "lint"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
wemcp = "cli:main"
